twisted (20.3.0-3pexip1) pexip; urgency=medium

  * Migrate to Bullseye
  * Revert debhelper from 13 to 12 to build on buster.

 -- Huw Jones <huw@pexip.com>  Mon, 11 Jan 2021 14:50:10 +0000

twisted (20.3.0-3) pexip; urgency=medium

  * Update python3-twisted dependencies to match upstream tls and conch
    extras: in particular, the missing dependency on python3-bcrypt broke
    openssh's autopkgtests.

 -- Colin Watson <cjwatson@debian.org>  Mon, 19 Oct 2020 23:13:43 +0100

twisted (20.3.0-2) unstable; urgency=medium

  * Upload to unstable

  [ Ondřej Nový ]
  * d/control: Update Maintainer field with new Debian Python Team
    contact address.
  * d/control: Update Vcs-* fields with new Debian Python Team Salsa
    layout.

  [ Andrej Shadura ]
  * Bump debhelper from old 12 to 13.
  * Update standards version to 4.5.0, no changes needed.

 -- Andrej Shadura <andrewsh@debian.org>  Wed, 14 Oct 2020 15:19:41 +0200

twisted (20.3.0-1) experimental; urgency=medium

  * New upstream release 20.3.0.
  * Drop patches applies upstream.

 -- Andrej Shadura <andrewsh@debian.org>  Mon, 23 Mar 2020 21:08:16 +0100

twisted (19.10.0~rc1-1) experimental; urgency=medium

  * New upstream 19.10.0 release candidate 1.

 -- Matthias Klose <doko@debian.org>  Sun, 27 Oct 2019 21:07:04 +0100

twisted (18.9.0-11) unstable; urgency=medium

  * Drop python2 support; Closes: #938731

 -- Sandro Tosi <morph@debian.org>  Wed, 01 Apr 2020 20:34:17 -0400

twisted (18.9.0-10) unstable; urgency=medium

  * The package currently doesn’t build apidocs, make this non-fatal.
    When apidocs aren’t available, skip fixing up the URLs so that the
    online version can be used.

 -- Andrej Shadura <andrewsh@debian.org>  Fri, 27 Mar 2020 10:59:44 +0100

twisted (18.9.0-9) unstable; urgency=medium

  * Wrap long lines in changelog entries: 18.9.0-2.
  * Bump debhelper from old 9 to 12.
  * Convert debian/copyright to the machine-readable format.