@@ -1,0 +1,28 @@
+#! /bin/sh
+
+set -e
+
+#DEBHELPER#
+
+rebuild_cache()
+{
+    # remove all cache files, then rebuild for the installed python versions
+    rm -f /usr/lib/python2.?/*-packages/twisted/plugins/dropin.cache
+    for p in $(pyversions -i); do
+	$p -c 'from twisted.plugin import IPlugin, getPlugins; list(getPlugins(IPlugin))' \
+	  >/dev/null 2>&1 || true
+    done
+}
+
+case "$1" in
+    triggered)
+	if [ "$2" = twisted-plugins-cache ]; then
+	    rebuild_cache
+	fi
+	;;
+    configure)
+	rebuild_cache
+	;;
+esac
+
+exit 0
