@@ -1,0 +1,3 @@
+docs/mail/examples/
+docs/mail/tutorial/
+
