@@ -1,0 +1,2 @@
+docs/names/examples/
+docs/names/howto/
