@@ -1,0 +1,2 @@
+docs/web/examples/
+docs/web/howto/
