@@ -1,0 +1,2 @@
+docs/words/examples/
+docs/words/howto/
