@@ -1,0 +1,11 @@
+?package(python-twisted,python-gtk2):\
+	needs="x11"\
+	section="Applications/Network/Communication"\
+	title="Manhole Twisted Client"\
+	command="/usr/bin/manhole"
+
+?package(python-twisted,python-tk):\
+	needs="x11"\
+	section="Applications/Network/Communication"\
+	title="Twisted Application Generator"\
+	command="/usr/bin/tkmktap"
