@@ -1,0 +1,7 @@
+#! /bin/sh -e
+
+if [ ! -h /usr/share/doc/python-twisted ]; then
+    rm -rf /usr/share/doc/python-twisted
+fi
+
+#DEBHELPER#
