@@ -1,5 +1,7 @@
-Tests: unit-tests-3
+Tests: unit-tests-2 unit-tests-3
 Restrictions: needs-root
 Depends: @,
+	 python-setuptools,
 	 python3-setuptools,
+	 python-hamcrest,
 	 python3-hamcrest,
