@@ -2,8 +2,9 @@ twisted (20.3.0-3pexip1) pexip; urgency=medium
 
   * Migrate to Bullseye
   * Revert debhelper from 13 to 12 to build on buster.
+  * Revert: Drop python2 support; Closes: #938731
 
- -- Huw Jones <huw@pexip.com>  Mon, 11 Jan 2021 14:50:10 +0000
+ -- Huw Jones <huw@pexip.com>  Tue, 12 Jan 2021 11:24:15 +0000
 
 twisted (20.3.0-3) pexip; urgency=medium
 
